@@ -35,13 +35,13 @@ Table of Contents:
  1.11.1. Data Manager
  1.11.2. Web component
 
-The following instructions describe how to install Hedgehog 2.0.0rc1 on Ubuntu 14.04 Server and set up imports of data.
+The following instructions describe how to install Hedgehog 2.0.0rc2 on Ubuntu 14.04 Server and set up imports of data.
  
 1.1. Requirements
 
 1.1.1. Platform support
 
-Version 2.0.0rc1 of Hedgehog is currently only supported on Ubuntu 14.04.2 LTS Server.
+Version 2.0.0rc2 of Hedgehog is currently only supported on Ubuntu 14.04.2 LTS Server.
 
 1.1.2. Database support
 
@@ -53,8 +53,8 @@ WARNING: The Hedgehog servers and PostgreSQL must both be configured to use UTC!
 
 1.1.3. Hedgehog source code
 
-Download the 2.0.0rc1 release from github: https://github.com/dns-stats/hedgehog/archive/2.0.0rc1.tar.gz
-(If you downloaded the above URL with wget the tarball will be called 2.0.0rc1.tar.gz)
+Download the 2.0.0rc2 release from github: https://github.com/dns-stats/hedgehog/archive/2.0.0rc2.tar.gz
+(If you downloaded the above URL with wget the tarball will be called 2.0.0rc2.tar.gz)
 
 1.2. Hedgehog components
 
@@ -90,8 +90,8 @@ sudo apt-get install libapache2-mod-r-base r-cran-ggplot2 r-cran-dbi \
 
 Building Hedgehog
 
-tar -xzf hedgehog-2.0.0rc1.tar.gz
-cd hedgehog-2.0.0rc1
+tar -xzf hedgehog-2.0.0rc2.tar.gz
+cd hedgehog-2.0.0rc2
 ./autogen.sh
 mkdir build
 cd build
