@@ -1,5 +1,7 @@
 
-<p>This document describes how to upgrade a server from release 2.0.0.b2 to release 2.0.0.rc1 of Hedgehog</p>
+<p>This document describes how to upgrade a server from release 2.0.0.b2 to release 2.0.0.rc2 of Hedgehog</p><ac:structured-macro ac:name="info"><ac:rich-text-body>
+<p>2.0.0rc1 and 2.0.0rc2 differ only in the inclusion of documentation source code to support packaging. Users already on rc1 do not need to upgrade to rc2.</p></ac:rich-text-body></ac:structured-macro>
+<p>&nbsp;</p>
 <p><ac:structured-macro ac:name="toc"><ac:parameter ac:name="style">none</ac:parameter></ac:structured-macro></p>
 <p><strong><span style="line-height: 1.5625;"><br /></span></strong></p>
 <p><strong><span style="line-height: 1.5625;">Back up the old installation</span></strong></p>
@@ -9,7 +11,7 @@
 <p>There have been several changes since the 2.0.0b2 release related to the tools.</p>
 <ul>
 <li>If you have cron jobs configured, please read the notes below and update as necessary.&nbsp;</li>
-<li>The Installation Guide provides examples of setting up the 2.0.0rc1 cron jobs for the different users/components.</li></ul></ac:rich-text-body></ac:structured-macro>
+<li>The Installation Guide provides examples of setting up the 2.0.0rc2 cron jobs for the different users/components.</li></ul></ac:rich-text-body></ac:structured-macro>
 <ol>
 <li>The Tools scripts have moved to &lt;prefix&gt;/libexec<span>/hedgehog/</span>
 <ol>
@@ -24,7 +26,7 @@
 <tbody>
 <tr>
 <th colspan="2" style="text-align: center;">2.0.0b2</th>
-<th colspan="2" style="text-align: center;">2.0.0rc1<br /><br /></th>
+<th colspan="2" style="text-align: center;">2.0.0rc2</th>
 <th colspan="1">&nbsp;</th>
 <th colspan="1">&nbsp;</th></tr>
 <tr>
@@ -165,9 +167,9 @@
 <td colspan="1"><span>&lt;DB_OWNER&gt;</span></td></tr></tbody></table>
 <h3>1.2 Changes to directory permissions</h3><ac:structured-macro ac:name="code"><ac:plain-text-body><![CDATA[sudo chown -R <DB_READ_USER>:<DB_READ_USER> <prefix>/var/hedgehog/www]]></ac:plain-text-body></ac:structured-macro>
 <h3>1.3 Download, configure and make new release</h3>
-<p><span>Download the 2.0.0b2 release from github: </span><a href="https://github.com/dns-stats/hedgehog/archive/2.0.0b2.tar.gz">https://github.com/dns-stats/hedgehog/archive/2.0.0rc1.tar.gz</a></p>
-<p>(If you downloaded the above URL with wget the tarball will be called 2.0.0rc1.tar.gz)</p><ac:structured-macro ac:name="code"><ac:parameter ac:name="language">bash</ac:parameter><ac:plain-text-body><![CDATA[tar -xzf hedgehog-2.0.0rc1.tar.gz
-cd hedgehog-2.0.0.rc1
+<p><span>Download the 2.0.0rc2 release from github: </span><a href="https://github.com/dns-stats/hedgehog/archive/2.0.0rc2.tar.gz">https://github.com/dns-stats/hedgehog/archive/2.0.0rc2.tar.gz</a></p>
+<p>(If you downloaded the above URL with wget the tarball will be called 2.0.0rc2.tar.gz)</p><ac:structured-macro ac:name="code"><ac:parameter ac:name="language">bash</ac:parameter><ac:plain-text-body><![CDATA[tar -xzf hedgehog-2.0.0rc2.tar.gz
+cd hedgehog-2.0.0.rc2
 ./autogen.sh
 mkdir build
 cd build
@@ -181,11 +183,11 @@ make]]></ac:plain-text-body></ac:structured-macro>
 <h3>1.5 Disable web front end</h3>
 <p>It is recommended to disable the web front end during upgrade e.g by enabling a holding page.</p>
 <h2>2. Installation</h2>
-<h3>2.1 Install new release</h3><ac:structured-macro ac:name="code"><ac:parameter ac:name="language">bash</ac:parameter><ac:plain-text-body><![CDATA[cd hedgehog-2.0.0rc1/build
+<h3>2.1 Install new release</h3><ac:structured-macro ac:name="code"><ac:parameter ac:name="language">bash</ac:parameter><ac:plain-text-body><![CDATA[cd hedgehog-2.0.0rc2/build
 sudo make install]]></ac:plain-text-body></ac:structured-macro><ac:structured-macro ac:name="note"><ac:rich-text-body>
-<p><span>Note that in rc1 'make install-rpg' step is no longer required on install. </span></p></ac:rich-text-body></ac:structured-macro>
+<p><span>Note that in rc2 'make install-rpg' step is no longer required on install. </span></p></ac:rich-text-body></ac:structured-macro>
 <h3>2.2 Remove moved/deleted files</h3>
-<p>Some files were moved or deleted between b2 and rc1. To clean the install directory run the following commands</p><ac:structured-macro ac:name="code"><ac:plain-text-body><![CDATA[cd <prefix>/include
+<p>Some files were moved or deleted between b2 and rc2. To clean the install directory run the following commands</p><ac:structured-macro ac:name="code"><ac:plain-text-body><![CDATA[cd <prefix>/include
 sudo rm DSCDataManager.h DSCIOManager.h \
         DSCStrategyFactory.h DSCStrategy.h \
         dsc_types.h Format1DSCStrategy.h \
