@@ -14,6 +14,12 @@
 # limitations under the License.
 #
 
+Hedgehog 2.0.0rc2 - 2015-07-09
+------------------------------
+
+* Add documentation source for packaging.
+
+
 Hedgehog 2.0.0rc1 - 2015-05-29
 ------------------------------
 
